--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BuyerActivity" />
+        <activity android:name=".ChooseActionActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".SignInActivity" />
     </application>
