--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation("androidx.fragment:fragment-ktx:1.3.5")
     // START - Room deps
     def room_version = "2.3.0"
 
