view to see all local items in recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -23,6 +24,7 @@
         <activity android:name=".SignInActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".AddDescriptionActivity" />
+        <activity android:name=".LocalGroceryActivity"/>
     </application>
 
 </manifest>
