--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation("androidx.fragment:fragment-ktx:1.3.5")
+
+    // START - Lifecycle deps
+    def lifecycle_version = "2.4.0-alpha02"
+    def arch_version = "2.1.0"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    // END - Lifecycle deps
+
     // START - Room deps
     def room_version = "2.3.0"
 
