--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".SignInActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".AddDescriptionActivity" />
-        <activity android:name=".LocalGroceryActivity"/>
+        <activity android:name=".LocalItemsActivity"/>
     </application>
 
 </manifest>
