--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackingMyPantry">
+        <activity android:name=".CameraActivity"></activity>
         <!-- TMP activities -->
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -24,7 +25,7 @@
         <activity android:name=".SignInActivity" />
         <activity android:name=".BuyActivity" />
         <activity android:name=".AddDescriptionActivity" />
-        <activity android:name=".LocalItemsActivity"/>
+        <activity android:name=".LocalItemsActivity" />
     </application>
 
 </manifest>
