--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,18 +39,18 @@ dependencies {
     implementation ("com.android.volley:volley:1.2.0")
     // END - Volley deps
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "androidx.activity:activity-ktx:1.2.3"
-    implementation("androidx.fragment:fragment-ktx:1.3.5")
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
 
     // START - Lifecycle deps
-    def lifecycle_version = "2.4.0-alpha02"
+    def lifecycle_version = "2.4.0-alpha03"
     def arch_version = "2.1.0"
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
     // END - Lifecycle deps
@@ -81,12 +81,14 @@ dependencies {
     // END - Room deps
 
     // START - Camerax
-    def camerax_version = "1.0.0"
+    def camerax_version = "1.0.1"
     // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle Library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
     implementation "androidx.camera:camera-view:1.0.0-alpha27"
+    // Barcode scanning
+    implementation 'com.google.mlkit:barcode-scanning:16.2.0'
     // END - Camerax
 }
