using encrypted shared prefs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,17 @@ dependencies {
     // Barcode scanning
     implementation 'com.google.mlkit:barcode-scanning:17.0.0'
     // END - Camerax
+
+    // START - encryption
+    implementation("androidx.security:security-crypto:1.0.0")
+
+    // For Identity Credential APIs
+    implementation("androidx.security:security-identity-credential:1.0.0-alpha03")
+
+    // For App Authentication APIs
+    implementation("androidx.security:security-app-authenticator:1.0.0-alpha02")
+
+    // For App Authentication API testing
+    androidTestImplementation("androidx.security:security-app-authenticator:1.0.0-alpha02")
+    // END - encryption
 }
