--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <uses-feature
         android:name="android.hardware.bluetooth"
@@ -31,9 +31,7 @@
             android:name=".ClearCredentialsService"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="false" />
-
-        <!-- TMP activities -->
+            android:stopWithTask="false" /> <!-- TMP activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -53,6 +51,7 @@
         <activity android:name=".CameraLauncherActivity" />
         <activity android:name=".CollectionsActivity" />
         <activity android:name=".BluetoothManagerActivity" />
+        <activity android:name=".ShareActivity"/>
     </application>
 
 </manifest>
