--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,15 @@ android {
 }
 
 dependencies {
+
     // START - Volley deps
-    implementation ("com.android.volley:volley:1.2.1")
+    implementation("com.android.volley:volley:1.2.1")
     // END - Volley deps
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -50,7 +51,7 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.3.6")
 
     // START - Lifecycle deps
-    def lifecycle_version = "2.4.0-alpha03"
+    def lifecycle_version = "2.4.0-rc01"
     def arch_version = "2.1.0"
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
     // END - Lifecycle deps
@@ -81,13 +82,13 @@ dependencies {
     // END - Room deps
 
     // START - Camerax
-    def camerax_version = "1.0.1"
+    def camerax_version = "1.0.2"
     // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle Library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha28"
+    implementation "androidx.camera:camera-view:1.0.0-alpha29"
     // Barcode scanning
     implementation 'com.google.mlkit:barcode-scanning:17.0.0'
     // END - Camerax
@@ -104,4 +105,8 @@ dependencies {
     // For App Authentication API testing
     androidTestImplementation("androidx.security:security-app-authenticator:1.0.0-alpha02")
     // END - encryption
+
+    // START - Google maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    // END - Google maps
 }
