--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackingMyPantry">
-        <activity
-            android:name=".SecureChangesActivity"
-            android:exported="true" />
-        <activity
-            android:name=".RemoveLocationsActivity"
-            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -51,7 +45,9 @@
             android:name=".ClearCredentialsService"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="false" /> <!-- TMP activities -->
+            android:stopWithTask="false" />
+
+        <!-- TMP activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -73,6 +69,7 @@
         <activity android:name=".BluetoothManagerActivity" />
         <activity android:name=".ShareActivity" />
         <activity android:name=".LocationsActivity" />
+        <activity android:name=".RemoveLocationsActivity"/>
     </application>
 
 </manifest>
